[package]
name = "interiors"
description = "Interior Point Method for Nonlinear Programming"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
itertools = "0.11"
sparsetools = "0.2"
spsolve = { version = "0.1", features = ["rlu"] }

num-traits = "0.2"
num-complex = "0.4"

[dev-dependencies]
#full = "0.1"
full = { path = "../full" }