[package]
name = "interiors"
description = "Primal-Dual Interior Point Method for Nonlinear Programming"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rwl/interiors"

[dependencies]
log = "0.4"
anyhow = "1"
sparsetools = "0.2.1"
spsolve = { version = "0.1" }

num-traits = "0.2"
num-complex = "0.4"

[dev-dependencies]
env_logger = "0.10"
ctor = "0.2.7"
float-cmp = "0.9"
full = "0.1"
spsolve = { version = "0.1", features = ["rlu"] }

[features]
step-control = []

[package.metadata.docs.rs]
all-features = true